--- a/DigitalAgency/Areas/Adminarea/Views/AdminPanel/Index.cshtml
+++ b/DigitalAgency/Areas/Adminarea/Views/AdminPanel/Index.cshtml
@@ -37,7 +37,7 @@
         </div>
 
         <div class="left-right-admin">
-            <a href="#">Beach Club</a>
+            <a asp-action="Index" asp-controller="Project">Projects</a>
             <a href="#">Hotels</a>
             <a href="#">Account Settings</a>
         </div>
