--- a/DigitalAgency/Areas/Adminarea/Views/Shared/_AdminLayout.cshtml
+++ b/DigitalAgency/Areas/Adminarea/Views/Shared/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
     <meta name="keywords"
           content="nobleui, bootstrap, bootstrap 5, bootstrap5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web" />
 
-    <title>Sea Breeze Admin </title>
+    <title>GAIDTECH admin </title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
